# triangle

./: CMakeLists.txt  README.md  main.cpp  run.bat
app/: App.cpp  App.h  Camera.cpp  Camera.h  Triangle.cpp  Triangle.h
app/render/: AnimatedSprite.cpp  AnimatedSprite.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h
app/resources/: ResourceManager.cpp  ResourceManager.h  stb_image.h
app/triangle/: Triangle.cpp  Triangle.h
glad/: gl.h
res/shaders/: fSprite.glsl  fragment.glsl  vSprite.glsl  vertex.glsl
